--- a/language/.en.json
+++ b/language/.en.json
@@ -23,7 +23,7 @@
         "fields": [
           {
             "label": "Media",
-            "description": "<H3> Image to display as the choice. The alternative text is used by the report.</H3>"
+            "description": "<h3> Image to display as the choice. The alternative text is used by the report.</h3>"
           },
           {
             "label": "Correct"
