--- a/language/.en.json
+++ b/language/.en.json
@@ -119,7 +119,21 @@
         },
         {
           "label": "Maximum alternatives per row",
-          "description": "Set the maximum number of alternatives per row to ensure the questions look alright."
+          "description": "Set the maximum number of alternatives per row to ensure the questions look alright.",
+          "options": [
+            {
+              "label": "1"
+            },
+            {
+              "label": "2"
+            },
+            {
+              "label": "3"
+            },
+            {
+              "label": "4"
+            }
+          ]
         },
         {
           "label": "Pass percentage",
