--- a/language/.en.json
+++ b/language/.en.json
@@ -149,6 +149,10 @@
           "default": "Check"
         },
         {
+          "label": "Text for \"Submit\" button",
+          "default": "Submit"
+        },
+        {
           "label": "Assistive technology description for \"Check\" button",
           "default": "Check the answers. The responses will be marked as correct, incorrect, or unanswered."
         },
