--- a/language/sr.json
+++ b/language/sr.json
@@ -149,6 +149,10 @@
           "default": "Провери"
         },
         {
+          "label": "Text for \"Submit\" button",
+          "default": "Submit"
+        },
+        {
           "label": "Опис помоћне технологије за \"Провери\" дугме",
           "default": "Проверите одговоре. Одговори ће бити означени као тачни, нетачни или без одговора."
         },
