Fix invalid language files

--- a/language/el.json
+++ b/language/el.json
@@ -149,6 +149,10 @@
             "default": "Έλεγχος"
           },
           {
+            "label": "Text for \"Submit\" button",
+            "default": "Submit"
+          },
+          {
             "label": "Περιγραφή υποστηρικτικής τεχνολογίας για το κουμπί \" Έλεγχος\"",
             "default": "Ελέγξτε τις απαντήσεις. Οι απαντήσεις θα επισημαίνονται ως σωστές, λανθασμένες ή απαντημένες."
           },
