--- a/language/nl.json
+++ b/language/nl.json
@@ -149,6 +149,10 @@
           "default": "Controleer"
         },
         {
+          "label": "Text for \"Submit\" button",
+          "default": "Submit"
+        },
+        {
           "label": "Ondersteunende technologie beschrijving voor \"Controleer\"-knop",
           "default": "Controleer de antwoorden. De antwoorden worden gemarkeerd als juist, onjuist, of niet-beantwoord."
         },
