--- a/language/de.json
+++ b/language/de.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "Richtig"
+          },
+          {
+            "label": "Bild-Zoom deaktivieren"
           }
         ]
       }
