--- a/language/ko.json
+++ b/language/ko.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "정답"
+          },
+          {
+            "label": "이미지 확대/축소 사용 안 함"
           }
         ]
       }
