--- a/language/lv.json
+++ b/language/lv.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "Pareizi"
+          },
+          {
+            "label": "Atspējot attēla tālummaiņu"
           }
         ]
       }
