--- a/language/sr.json
+++ b/language/sr.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "Тачно"
+          },
+          {
+            "label": "Онемогући увеличавање слике"
           }
         ]
       }
