--- a/language/.en.json
+++ b/language/.en.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "Correct"
+          },
+          {
+            "label": "Disable image zooming"
           }
         ]
       }
