--- a/language/es.json
+++ b/language/es.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "Correcto"
+          },
+          {
+            "label": "Deshabilitar acercamiento de imagen"
           }
         ]
       }
