--- a/language/nl.json
+++ b/language/nl.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "Juist"
+          },
+          {
+            "label": "Beeld zoomen uitschakelen"
           }
         ]
       }
