--- a/language/nn.json
+++ b/language/nn.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "Correct"
+          },
+          {
+            "label": "Deaktiver zoomingfunksjon."
           }
         ]
       }
