--- a/language/sl.json
+++ b/language/sl.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "Pravilen odgovor"
+          },
+          {
+            "label": "Onemogoči povečavo slike"
           }
         ]
       }
