--- a/language/tr.json
+++ b/language/tr.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "Doğru"
+          },
+          {
+            "label": "Görüntü yakınlaştırmayı devre dışı bırak"
           }
         ]
       }
