Add translations (adapted from h5p-multi-choice)

--- a/language/de.json
+++ b/language/de.json
@@ -27,6 +27,19 @@
           },
           {
             "label": "Richtig"
+          },
+          {
+            "label": "Rückmeldung",
+            "fields": [
+              {
+                "label": "Nachricht, wenn Antwort gewählt wurde",
+                "description": "Nachricht wird unter der Antwort nach dem Klicken auf \"Überprüfen\" (oder \"Lösung anzeigen\" wenn aktiviert) angezeigt, wenn die Antwort gewählt wurde."
+              },
+              {
+                "label": "Nachricht, wenn Antwort nicht gewählt wurde",
+                "description": "Nachricht wird unter der Antwort nach dem Klicken auf \"Überprüfen\" (oder \"Lösung anzeigen\" wenn aktiviert) angezeigt, wenn die Antwort nicht gewählt wurde."
+              }
+            ]
           }
         ]
       }
