--- a/language/el.json
+++ b/language/el.json
@@ -27,6 +27,19 @@
           },
           {
             "label": "Σωστό"
+          },
+          {
+            "label": "Ανατροφοδότηση",
+            "fields": [
+              {
+                "label": "Μήνυμα σε επιλεγμένη απάντηση",
+                "description": "Μήνυμα που εμφανίζεται κάτω από την επιλεγμένη απάντηση κατά τον \"Έλεγχο απάντησης\"."
+              },
+              {
+                "label": "Μήνυμα σε μη επιλεγμένη απάντηση",
+                "description": "Μήνυμα που εμφανίζεται κάτω από τη μη επιλεγμένη απάντηση κατά τον \"Ελεγχο απάντησης\"."
+              }
+            ]
           }
         ]
       }
