--- a/language/sr.json
+++ b/language/sr.json
@@ -27,6 +27,19 @@
           },
           {
             "label": "Тачно"
+          },
+          {
+            "label": "Повратне информације",
+            "fields": [
+              {
+                "label": "Порука се приказује ако је одабран одговор",
+                "description": "Порука ће се појавити испод одговора на \"провери\" ако је одабран овај одговор."
+              },
+              {
+                "label": "Порука се приказује ако одговор није изабран",
+                "description": "Порука ће се појавити испод одговора на \"провери\" ако овај одговор није изабран."
+              }
+            ]
           }
         ]
       }
