--- a/language/.en.json
+++ b/language/.en.json
@@ -27,6 +27,19 @@
           },
           {
             "label": "Correct"
+          },
+          {
+            "label": "Feedback",
+            "fields": [
+              {
+                "label": "Message displayed if answer is selected",
+                "description": "Message will appear below the answer on \"Check\" (or \"Show solution\" if enabled) if this answer is selected."
+              },
+              {
+                "label": "Message displayed if answer is not selected",
+                "description": "Message will appear below the answer on \"Check\" (or \"Show solution\" if enabled) if this answer is not selected."
+              }
+            ]
           }
         ]
       }
