--- a/language/el.json
+++ b/language/el.json
@@ -33,11 +33,11 @@
             "fields": [
               {
                 "label": "Μήνυμα σε επιλεγμένη απάντηση",
-                "description": "Μήνυμα που εμφανίζεται κάτω από την επιλεγμένη απάντηση κατά τον \"Έλεγχο απάντησης\"."
+                "description": "Message will appear below the answer on \"Check\" (or \"Show solution\" if enabled) if this answer is selected."
               },
               {
                 "label": "Μήνυμα σε μη επιλεγμένη απάντηση",
-                "description": "Μήνυμα που εμφανίζεται κάτω από τη μη επιλεγμένη απάντηση κατά τον \"Ελεγχο απάντησης\"."
+                "description": "Message will appear below the answer on \"Check\" (or \"Show solution\" if enabled) if this answer is not selected."
               }
             ]
           }
