--- a/language/es-mx.json
+++ b/language/es-mx.json
@@ -33,11 +33,11 @@
             "fields": [
               {
                 "label": "Mensaje que se muestra si se selecciona una respuesta",
-                "description": "El mensaje aparecerá debajo de la respuesta al \"comprobar\" si esta respuesta es seleccionada."
+                "description": "Message will appear below the answer on \"Check\" (or \"Show solution\" if enabled) if this answer is selected."
               },
               {
                 "label": "Mensaje mostrado si la respuesta no es seleccionada",
-                "description": "El mensaje aparecerá debajo de la respuesta al \"comprobar\" si esta respuesta no está seleccionada."
+                "description": "Message will appear below the answer on \"Check\" (or \"Show solution\" if enabled) if this answer is not selected."
               }
             ]
           }
