--- a/language/es.json
+++ b/language/es.json
@@ -1,6 +1,7 @@
 {
   "semantics": [
     {
+      "label": "Medio",
       "fields": [
         {
           "label": "Tipo",
@@ -9,8 +10,7 @@
         {
           "label": "Deshabilitar acercamiento de imagen"
         }
-      ],
-      "label": "Medio"
+      ]
     },
     {
       "label": "Pregunta"
@@ -33,11 +33,11 @@
             "fields": [
               {
                 "label": "Mensaje que se muestra si se selecciona una respuesta",
-                "description": "El mensaje aparecerá debajo de la respuesta al \"comprobar\" si esta respuesta es seleccionada."
+                "description": "Message will appear below the answer on \"Check\" (or \"Show solution\" if enabled) if this answer is selected."
               },
               {
                 "label": "Mensaje mostrado si la respuesta no es seleccionada",
-                "description": "El mensaje aparecerá debajo de la respuesta al \"comprobar\" si esta respuesta no está seleccionada."
+                "description": "Message will appear below the answer on \"Check\" (or \"Show solution\" if enabled) if this answer is not selected."
               }
             ]
           }
@@ -54,6 +54,7 @@
             }
           ],
           "label": "Definir retroalimentación personalizada para cualquier rango de puntaje",
+          "description": "Haga clic en el botón \"Añadir rango\" para añadir cuantos rangos necesite. Ejemplo: 0-20% Mal puntaje, 21-91% Puntaje Promedio, 91-100% ¡Magnífico Puntaje!",
           "entity": "rango",
           "field": {
             "fields": [
@@ -66,8 +67,7 @@
                 "placeholder": "Complete la retroalimentación"
               }
             ]
-          },
-          "description": "Haga clic en el botón \"Añadir rango\" para añadir cuantos rangos necesite. Ejemplo: 0-20% Mal puntaje, 21-91% Puntaje Promedio, 91-100% ¡Magnífico Puntaje!"
+          }
         }
       ]
     },
@@ -178,8 +178,8 @@
           "default": "Mostrar la solución. Las opciones correctas serán marcadas."
         },
         {
-          "default": "Respuesta correcta",
-          "label": "Respuesta Correcta (no se muestra)"
+          "label": "Respuesta Correcta (no se muestra)",
+          "default": "Respuesta correcta"
         },
         {
           "label": "Respuesta Incorrecta (no mostrada)",
@@ -190,8 +190,8 @@
           "default": "Debería de haberse seleccionado"
         },
         {
-          "default": "No debería haber sido seleccionada",
-          "label": "La opción no debería de haberse seleccionado"
+          "label": "La opción no debería de haberse seleccionado",
+          "default": "No debería haber sido seleccionada"
         },
         {
           "label": "Texto para mensaje \"Requiere respuesta\"",
@@ -218,8 +218,8 @@
               "default": "¿Terminado?"
             },
             {
-              "default": "¿Está seguro de querer termina?",
-              "label": "Texto del cuerpo"
+              "label": "Texto del cuerpo",
+              "default": "¿Está seguro de querer termina?"
             },
             {
               "label": "Etiqueta botón Cancelar",
@@ -235,8 +235,8 @@
           "label": "Diálogo de confirmación para Comprobar",
           "fields": [
             {
-              "default": "¿Terminado?",
-              "label": "Texto del encabezado"
+              "label": "Texto del encabezado",
+              "default": "¿Terminado?"
             },
             {
               "label": "Texto del cuerpo",
