--- a/language/eu.json
+++ b/language/eu.json
@@ -33,11 +33,11 @@
             "fields": [
               {
                 "label": "Erantzuna aukeratuta badago bistaratzen den mezua",
-                "description": "Mezua erantzunaren azpiko \"egiaztatu\" botoian agertuko da erantzun hau aukeratuta badago."
+                "description": "Message will appear below the answer on \"Check\" (or \"Show solution\" if enabled) if this answer is selected."
               },
               {
                 "label": "Erantzuna aukeratuta ez badago bistaratzen den mezua",
-                "description": "Mezua erantzunaren azpiko \"egiaztatu\" botoian agertuko da erantzun hau aukeratuta ez badago.."
+                "description": "Message will appear below the answer on \"Check\" (or \"Show solution\" if enabled) if this answer is not selected."
               }
             ]
           }
