--- a/language/nl.json
+++ b/language/nl.json
@@ -33,11 +33,11 @@
             "fields": [
               {
                 "label": "Getoond bericht als het antwoord is geselecteerd",
-                "description": "Bericht zal onder het antwoord verschijnen bij \"Controleer\" als dit antwoord is geselecteerd."
+                "description": "Message will appear below the answer on \"Check\" (or \"Show solution\" if enabled) if this answer is selected."
               },
               {
                 "label": "Getoond bericht als het antwoord niet is geselecteerd",
-                "description": "Bericht zal onder het antwoord verschijnen bij \"Controleer\" als dit antwoord niet is geselecteerd."
+                "description": "Message will appear below the answer on \"Check\" (or \"Show solution\" if enabled) if this answer is not selected."
               }
             ]
           }
@@ -232,7 +232,7 @@
           ]
         },
         {
-          "label": "Bevestigingsdialoog voor \"Opnieuw\"",          
+          "label": "Bevestigingsdialoog voor \"Opnieuw\"",
           "fields": [
             {
               "label": "Koptekst",
