--- a/language/tr.json
+++ b/language/tr.json
@@ -33,11 +33,11 @@
             "fields": [
               {
                 "label": "Cevap seçilirse görüntülenecek ileti",
-                "description": "Bu cevap seçilirse \"kontrol et\" üzerindeki cevabın altında ileti görünecek."
+                "description": "Message will appear below the answer on \"Check\" (or \"Show solution\" if enabled) if this answer is selected."
               },
               {
                 "label": "Cevap seçilmezse görüntülenecek ileti",
-                "description": "Bu cevap seçilmezse \"kontrol et\" üzerindeki cevabın altında ileti görünecek."
+                "description": "Message will appear below the answer on \"Check\" (or \"Show solution\" if enabled) if this answer is not selected."
               }
             ]
           }
