Create translations with `h5p update-translations`

--- a/language/de.json
+++ b/language/de.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "Richtig"
+          },
+          {
+            "label": "Zoomen und Verschieben des Bildes ermöglichen"
           }
         ]
       }
