--- a/language/eu.json
+++ b/language/eu.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "Zuzena"
+          },
+          {
+            "label": "Enable image zooming and panning"
           }
         ]
       }
