--- a/language/nb.json
+++ b/language/nb.json
@@ -1,16 +1,16 @@
 {
   "semantics": [
     {
+      "label": "Medieelement",
       "fields": [
         {
-          "description": "Valgfritt medieelement. Elementet vil bli plassert over spørsmålet.",
-          "label": "Type"
+          "label": "Type",
+          "description": "Valgfritt medieelement. Elementet vil bli plassert over spørsmålet."
         },
         {
           "label": "Deaktiver zoomingfunksjon."
         }
-      ],
-      "label": "Medieelement"
+      ]
     },
     {
       "label": "Spørsmål"
@@ -27,13 +27,23 @@
           },
           {
             "label": "Correct"
+          },
+          {
+            "label": "Enable image zooming and panning"
           }
         ]
       }
     },
     {
+      "label": "Tilbakemelding på hele oppgava",
       "fields": [
         {
+          "widgets": [
+            {
+              "label": "Forhandsinnstilling"
+            }
+          ],
+          "label": "Opprett poengområder og legg inn tilbakemeldinger.",
           "description": "Klikk på knappen \"Legg til poengområde\" og legg til så mange poengområder du trenger. Eksempel: 0–40 % Svakt resultat, 41–80 % Gjennomsnittlig resultat, 81–100 % Flott resultat!",
           "entity": "Område",
           "field": {
@@ -47,16 +57,9 @@
                 "placeholder": "Skriv inn tilbakemelding."
               }
             ]
-          },
-          "widgets": [
-            {
-              "label": "Forhandsinnstilling"
-            }
-          ],
-          "label": "Opprett poengområder og legg inn tilbakemeldinger."
+          }
         }
-      ],
-      "label": "Tilbakemelding på hele oppgava"
+      ]
     },
     {
       "label": "Oppgaveinnstillinger",
@@ -198,10 +201,11 @@
           "default": "You got :num out of :total points"
         },
         {
+          "label": "Check confirmation dialog",
           "fields": [
             {
-              "default": "Finish?",
-              "label": "Header text"
+              "label": "Header text",
+              "default": "Finish?"
             },
             {
               "label": "Body text",
@@ -215,8 +219,7 @@
               "label": "Confirm button label",
               "default": "Finish"
             }
-          ],
-          "label": "Check confirmation dialog"
+          ]
         },
         {
           "label": "Retry confirmation dialog",
