--- a/language/el.json
+++ b/language/el.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "Σωστό"
+          },
+          {
+            "label": "Enable image zooming and panning"
           }
         ]
       }
