--- a/language/nl.json
+++ b/language/nl.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "Juist"
+          },
+          {
+            "label": "Enable image zooming and panning"
           }
         ]
       }
@@ -219,7 +222,7 @@
           ]
         },
         {
-          "label": "Bevestigingsdialoog voor \"Opnieuw\"",          
+          "label": "Bevestigingsdialoog voor \"Opnieuw\"",
           "fields": [
             {
               "label": "Koptekst",
