--- a/language/tr.json
+++ b/language/tr.json
@@ -27,6 +27,9 @@
           },
           {
             "label": "Doğru"
+          },
+          {
+            "label": "Enable image zooming and panning"
           }
         ]
       }
