--- a/language/mn.json
+++ b/language/mn.json
@@ -1,7 +1,7 @@
 {
   "semantics": [
     {
-      "label": "Media",
+      "label": "Медиа",
       "fields": [
         {
           "label": "Төрөл",
